--- a/files/module4_3.html
+++ b/files/module4_3.html
@@ -57,7 +57,7 @@
         // declaring the layer    
         var example;
 
-        // This loads the example GeoJSON map data file
+        // This loads the example GeoJSON map data file using fetch API - https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch
         fetch('https://raw.githubusercontent.com/jcritchley/CODG136/master/datasets/geojson_sample.geojson', {
             headers: {
                 'Accept': 'application/json'
